=== HEAD

* Add Database#dataset_class for modifying the class used for datasets for a single Database object (jeremyevans)

* Plugins that override Model.load should be modified to override Model.call instead (jeremyevans)

* Speed up loading model objects from the database by up to 7-16% (jeremyevans)

* Create accessor methods for all columns in a model's table, even if the dataset doesn't select the columns (jeremyevans)

* Add mock adapter for better mocking of a database connection (jeremyevans)

* Have models pass their dataset instead of table name to Database#schema (jeremyevans)

* Allow Database#schema to take a dataset as the table argument, and use its identifier input/output methods (jeremyevans)

* Significant improvements to the db2 adapter (jeremyevans)

* Handle methods with names that can't be called directly in Model.def_dataset_method (jeremyevans)

* Add dataset_associations plugin for making dataset methods that return datasets of associated objects (jeremyevans)

* Don't allow Model.def_dataset_method to override private model methods (jeremyevans)

* Parsing primary key information from system tables in the shared MSSQL adapter (jeremyevans)

* Fix handling of composite primary keys when emulating alter table operations on SQLite (jeremyevans)

* Emulate add_constraint and drop_constraint alter table operations on SQLite (jeremyevans)

* Apply the correct pragmas when connecting to SQLite via the Amalgalite and Swift adapters (jeremyevans)

* Fix bound variable usage for some types (e.g. Date) when used outside of prepared statements on SQLite (jeremyevans)

* Work around SQLite column naming bug when using subselects (jeremyevans)

* Make prepared_statements plugin work with adapters that require type specifiers for variable placeholders, such as oracle (jeremyevans)

* Add savepoint support to the generic JDBC transaction support (used by 6 jdbc subadapters) (jeremyevans)
